--- a/views/discount/discountscripts.ejs
+++ b/views/discount/discountscripts.ejs
@@ -304,4 +304,10 @@
     $("#search-input").on("input", filterTableRows);
 
   });
+
+  const socket = io();
+
+// Emit the exampleEvent from the client
+socket.emit('exampleEvent', { message: 'Hello from the client!' });
+
 </script>
