--- a/views/topbar.ejs
+++ b/views/topbar.ejs
@@ -55,10 +55,10 @@
             <!-- Dropdown - Alerts -->
             <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
                 aria-labelledby="alertsDropdown">
-                <h6 class="dropdown-header">
+                <h6 class="dropdown-header alert-header">
                     Alerts Center
                 </h6>
-                <div id="alert-messages">
+                <div class="alert-container" id="alert-messages">
                     
                 </div>
 
