--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -104,7 +104,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Price</span>
                                     </div>
-                                    <input id="price" name="price" type="text" class="form-control" placeholder="Enter Product Price" aria-label="employeeid" aria-describedby="basic-addon1">
+                                    <input id="price" name="price" value="" type="text" class="form-control" placeholder="Enter Product Price" aria-label="employeeid" aria-describedby="basic-addon1" oninput="formatPrice(event, this)">
                                 </div>
                             </div>
                             <div class="col-md-6">
