--- a/views/scripts.ejs
+++ b/views/scripts.ejs
@@ -329,15 +329,11 @@
         });
     }
 
-    if('<%= accesstype%>' == "Owner"){
-        const socket = io();
+    const socket = io();
+    let alertdiv = "";
 
-        let alertdiv = "";
-
+    if('<%= accesstype%>' == "Owner" || '<%= accesstype%>' == "Manager"){
         socket.on('dataPulling', (data, data2) => {
-            console.log("production: ", data)
-            console.log("transfer: ", data2)
-            
             if(data.length == 0 && data2 == 0){
                 $('#alert-messages').empty();
                 const newItem = $(`
@@ -352,50 +348,105 @@
                 let count = parseInt(data.length) + parseInt(data2.length)
                 $('#badgecount').text(count);
                 $('#alert-messages').empty();
-                productionalert(data);
-                transferalert(data2);
+                let production_message = " Requested a Production Approval for "
+                let transfer_message = ' Requested a Production Transfer for '
+                productionalert(data, production_message);
+                transferalert(data2, transfer_message);
             }
         });
-
-        function productionalert(data){
-            data.forEach(item => {
+    }else if('<%= accesstype%>' == "User"){
+        socket.on('userDataPull', (data, data2) => {
+            if(data.length == 0 && data2 == 0){
+                $('#alert-messages').empty();
                 const newItem = $(`
-                <a class="dropdown-item d-flex align-items-center" href="/production">
-                    <div class="mr-3">
-                    <div class="icon-circle bg-teal">
-                        <i class="fas fa-file-alt"></i>
-                    </div>
-                    </div>
-                    <div>
-                    <div class="small text-gray-500">${item.startdate} - ${item.enddate}</div>
-                    <span class="font-weight-bold">${item.supervisorid} Requested an approval for production of ${item.productid}!</span>
-                    </div>
+                <a class="dropdown-item d-flex align-items-center" href="#">
+                    <div class="row justify-content-center"> No Notification </div>
                 </a>
                 `);
 
                 $('#alert-messages').append(newItem);
-            });
-        }
-
-        function transferalert(data2){
-            data2.forEach(item => {
-                const newItem = $(`
-                <a class="dropdown-item d-flex align-items-center" href="/productiontransfer">
-                    <div class="mr-3">
-                    <div class="icon-circle bg-teal">
-                        <i class="fas fa-file-alt"></i>
-                    </div>
-                    </div>
-                    <div>
-                    <div class="small text-gray-500">Branch ${item.branchid}</div>
-                    <span class="font-weight-bold">Requested a transfer of ${item.productid} with a quantity of ${item.quantity}!</span>
-                    </div>
-                </a>
-                `);
-
-                $('#alert-messages').append(newItem);
-            });
-        }
+            }else{
+                $('#badgecount').text(0);
+                let count = parseInt(data.length) + parseInt(data2.length)
+                $('#badgecount').text(count);
+                $('#alert-messages').empty();
+                let production_message = " Your Production Request was Approved! Product Name: "
+                let transfer_message = "Your Transfer Request was Aprroved! Product Name: "
+                productionalert(data, production_message);
+                transferalert(data2, transfer_message);
+            }
+        });
     }
+
+    function productionalert(data, message){
+        data.forEach(item => {
+            const newItem = $(`
+            <a class="dropdown-item d-flex align-items-center" href="/production">
+                <div class="mr-3">
+                <div class="icon-circle bg-teal">
+                    <i class="fas fa-file-alt"></i>
+                </div>
+                </div>
+                <div>
+                <div class="small text-gray-500">${item.startdate} - ${item.enddate}</div>
+                <span class="font-weight-bold">${item.supervisorid} ${message} ${item.productid}!</span>
+                </div>
+            </a>
+            `);
+
+            $('#alert-messages').append(newItem);
+        });
+    }
+
+    function transferalert(data2, message){
+        data2.forEach(item => {
+            const newItem = $(`
+            <a class="dropdown-item d-flex align-items-center" href="/productiontransfer">
+                <div class="mr-3">
+                <div class="icon-circle bg-teal">
+                    <i class="fas fa-file-alt"></i>
+                </div>
+                </div>
+                <div>
+                <div class="small text-gray-500">Branch ${item.branchid}</div>
+                <span class="font-weight-bold">${message} ${item.productid}</span>
+                </div>
+            </a>
+            `);
+
+            $('#alert-messages').append(newItem);
+        });
+    }
+    
+    function formatPrice(event, input) {
+    event.preventDefault();
+
+    const cursorPosition = input.selectionStart;
+    const originalValue = input.value;
+    const defaultValue = '₱0.00';
+    const currentValue = originalValue || defaultValue;
+
+    let value = currentValue.replace(/[^0-9.]/g, '');
+    let number = parseFloat(value);
+
+    if (!isNaN(number)) {
+        const formattedValue = number.toLocaleString('en-PH', {
+            style: 'currency',
+            currency: 'PHP',
+            minimumFractionDigits: 2,
+            maximumFractionDigits: 2
+        });
+
+        input.value = formattedValue;
+
+        // Calculate the cursor position based on the formatted value
+        let newPosition = cursorPosition + (formattedValue.indexOf('.') > currentValue.indexOf('.') ? 1 : 0);
+
+        // Set the new cursor position
+        input.setSelectionRange(newPosition, newPosition);
+    } else {
+        input.value = defaultValue;
+    }
+}
 
 </script>
